--- a/app-test-sonar/pom.xml
+++ b/app-test-sonar/pom.xml
@@ -15,6 +15,9 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
+		<properties>
+  <sonar.projectKey>andreimedan_app-test-sonar</sonar.projectKey>
+</properties>
 	</properties>
 	<dependencies>
 		<dependency>
