--- a/app-test-sonar/pom.xml
+++ b/app-test-sonar/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.6.7</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>com.medan</groupId>
 	<artifactId>app-test-sonar</artifactId>
